# MoViewer

./: .gitignore  CHANGELOG.md  pyproject.toml
MoViewer/: .env  manage.py
MoViewer/Comments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
MoViewer/MoViewer/: asgi.py  settings.py  urls.py  views.py  wsgi.py
MoViewer/Movie/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
MoViewer/authentication/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
MoViewer/authentication/static/authentication/css/: style.css
MoViewer/authentication/static/authentication/js/: plyr.js  script.js
MoViewer/authentication/templates/authentication/: all_films.html  base.html  change_profile.html  home.html  login.html  my_profile.html  register.html  video.html
